--- a/fonts/oauth_callback.html
+++ b/fonts/oauth_callback.html
@@ -48,7 +48,7 @@
                             <li>
                                 <label>短信验证码:</label>
                                 <input type="text" v-model="sms_code" v-on:blur="check_sms_code" name="msg_code" id="msg_code" class="msg_input">
-                                <a v-on:click="send_sms_code" class="get_msg_code"></a>
+                                <a href="#" v-on:click="send_sms_code" class="get_msg_code">{{ sms_code_tip }}</a>
                                 <span v-show="error_sms_code" class="error_tip">{{ error_sms_code_message }}</span>
                             </li>
                             <li class="reg_sub">
