--- a/fonts/detail.html
+++ b/fonts/detail.html
@@ -426,7 +426,6 @@
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-
-	
+    <script type="text/javascript" src="js/detail.js"></script>
 </body>
 </html>
